<resources>
    <string name="app_name">Calculatrice</string>

    <string name="main_button_0">0</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_button_6">6</string>
    <string name="main_button_7">7</string>
    <string name="main_button_8">8</string>
    <string name="main_button_9">9</string>
    <string name="main_button_add">+</string>
    <string name="main_button_subtract">-</string>
    <string name="main_button_multiply">x</string>
    <string name="main_button_divide">/</string>
    <string name="main_button_decimal">.</string>
    <string name="main_button_clear">C</string>
    <string name="main_button_clearAll">CE</string>
    <string name="main_button_calculate">=</string>

</resources>