<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingEnd="15dp"
    android:paddingStart="15dp"
    android:paddingTop="60dp"
    android:paddingBottom="60dp"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMemory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/main_memory_textSize"
            android:layout_marginTop="30dp">

        </TextView>

        <TextView
            android:id="@+id/txtOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewEnd"
            android:textSize="40sp"
            android:padding="20dp"
            android:background="@color/gray_dark"
            android:textColor="@color/white">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_button_7"
                    android:id="@+id/button7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_8"
                    android:id="@+id/button8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_9"
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />


                <Button
                    android:text="@string/main_button_add"
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button.dark.outlined"
                    >
                </Button>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_button_4"
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_5"
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_6"
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />


                <Button
                    android:text="@string/main_button_subtract"
                    android:id="@+id/buttonSubtract"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button.dark.outlined"
                    >
                </Button>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_button_1"
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_2"
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_3"
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />


                <Button
                    android:text="@string/main_button_multiply"
                    android:id="@+id/buttonMultiply"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button.dark.outlined"
                    >
                </Button>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_button_clear"
                    android:id="@+id/buttonClear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button.red.outlined"
                    />

                <Button
                    android:text="@string/main_button_0"
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_decimal"
                    android:id="@+id/buttonDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button"
                    />


                <Button
                    android:text="@string/main_button_divide"
                    android:id="@+id/buttonDivide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    style="@style/Widget.Calculatrice.Button.dark.outlined"
                    >
                </Button>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:text="@string/main_button_clearAll"
                    android:id="@+id/buttonClearAll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    android:backgroundTint="@color/red"
                    style="@style/Widget.Calculatrice.Button"
                    />

                <Button
                    android:text="@string/main_button_calculate"
                    android:id="@+id/buttonCalculate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/main_button_margin"
                    android:backgroundTint="@color/green"
                    style="@style/Widget.Calculatrice.Button"
                    />

            </TableRow>

        </TableLayout>
    </LinearLayout>



</LinearLayout>